Setup basic REST-CRUD methods for user-DB

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "theweekendr-backend",
   "version": "1.0.0",
   "description": "Chris Fanucchi, Mathew Torres & Dustin Apodaca",
-  "main": "server.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
