--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/TheWeekendr/Weekendr-backend#readme",
   "dependencies": {
+    "axios": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.6.5"
-  }
+  },
+  "devDependencies": {}
 }
